--- a/product_harmonized_system/views/product_template.xml
+++ b/product_harmonized_system/views/product_template.xml
@@ -16,11 +16,11 @@
                     name="hs_code_id"
                     attrs="{'invisible': [('type', '=', 'service')]}"
                 />
-                <field
-                    name="origin_country_id"
-                    attrs="{'invisible': [('type', '=', 'service')]}"
-                    options="{'no_create': True}"
-                />
+<!--                <field-->
+<!--                    name="origin_country_id"-->
+<!--                    attrs="{'invisible': [('type', '=', 'service')]}"-->
+<!--                    options="{'no_create': True}"-->
+<!--                />-->
             </group>
         </field>
     </record>
